# trtinfer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  README.md
examples/YOLOv8/: YOLOv8.cpp  YOLOv8.h
examples/common/: CMakeLists.txt
examples/demoBatchYOLOv8/: CMakeLists.txt  demoBatchYOLOv8.cpp
examples/exampleBatchYOLOv8/: CMakeLists.txt  YOLOv8.cpp  YOLOv8.h  exampleBatchYOLOv8.cpp
examples/exampleKLT/: CMakeLists.txt  exampleKLT.cpp
examples/exampleResnet50/: CMakeLists.txt  README.md  ResNet50.cpp  ResNet50.h  exampleResnet50.cpp  exampleResnet50_v2.cpp
examples/exampleResnet50_v2/: CMakeLists.txt  README.md  exampleResnet50_v2.cpp
examples/exampleYOLOv8/: CMakeLists.txt  YOLOv8.cpp  YOLOv8.h  exampleYOLOv8.cpp  yolov8.cpp  yolov8.h
examples/scratch/: CMakeLists.txt  main.cpp  people.jpg:Zone.Identifier
include/: IEngine.h  ONNXEngine.h  TRTEngine.h  TRTEngine.inl  engine.h  logger.h  logging.h  tensorrt_infer.h  util.h  utils.h
scripts/: run_dev_orin.sh  run_dev_ubuntu-22.04.sh  yolov8s_export.py
src/: TRTEngine.cpp  engine.cpp  logger.cpp  tensorrt_infer.cpp  tensorrt_infer_utils.cpp
srcForBatch/: TRTEngine_batch.h  TRTEngine_batch.inl  YOLOv8.cpp  YOLOv8.h
